<resources>
    <string name="app_name">EcoGuardian</string>
    <string name="title_tsunami">TSUNAMI</string>
    <string name="title_tsunami_instruksi">Ayo tuliskan bagaimana tsunami dapat terjadi dan apa saja dampak yang ditimbulkan dari tsunami tersebut!</string>
    <string name="amatilah_video_ini">Amatilah video ini!</string>
    <string name="ayo_tuliskan_bagaimana_tsunami_dapat_terjadi_dan_apa_saja_dampak_yang_ditimbulkan_dari_tsunami_tersebut">Ayo tuliskan bagaimana tsunami dapat terjadi dan apa saja dampak yang ditimbulkan dari tsunami tersebut!</string>
    <string name="author">Muhammad Fikri F</string>
    <string name="ketikkan_sesuatu_disini">Ketikkan sesuatu di sini</string>
    <string name="menurut_kbbi_tsunami_adalah_gelombang_air_laut_dahsyat_gelombang_pasang_yang_terjadi_karena_gempa_bumi_atau_letusan_gunung_api_di_dasar_laut_secara_etimologi_tsunami_berasal_dari_bahasa_jepang_tsu_berarti_pelabuhan_dan_nami_yang_berarti_gelombang_tsunami_ialah_gelombang_raksasa_yang_terjadi_karena_disebabkan_pergerakan_di_dasar_laut">Menurut KBBI, tsunami adalah gelombang air laut dahsyat (gelombang pasang) yang terjadi karena gempa bumi atau letusan gunung api di dasar laut. Secara etimologi, tsunami berasal dari Bahasa Jepang, \'tsu\' berarti pelabuhan dan \'nami\' yang berarti gelombang. Tsunami ialah gelombang raksasa yang terjadi karena disebabkan pergerakan di dasar laut.</string>
    <string name="penyebab_tsunami"><b>Penyebab Tsunami:\n</b><ul><li>Letusan gunung api di bawah laut dan gunung api pada sebuah pulau.</li>\n<li>Gempa bumi yang diikuti dislokasi. Dislokasi merupakan perpindahan masa tanah atau batuan yang sangat besar di bawah air laut atau danau.</li>\n<li>Tanah longsor di bawah tubuh air laut.</li>\n</ul></string>
    <string name="ciri_ciri_terjadinya_tsunami"><b>Ciri-Ciri Terjadinya Tsunami:</b>\n<ul>\n<li>Terjadi getaran kuat di sekitar pantai.</li>\n<li>Setelah getaran mereda, laut tiba-tiba surut tersedot beberapa kilometer ke tengah laut.</li>\n<li>Adanya perubahan tingkah laku hewan. Hal ini disebabkan karena biasanya hewan bisa merasakan tanda bahaya yang tidak bisa dirasakan manusia di sekitaran mereka.</li></ul></string>
    <string name="slogan">Mari kita selamatkan dunia dengan menjaga lingkungan sekitar </string>
    <string name="kata_pengantar">\t\tPuji dan syukur saya panjatkan kepada Allah Swt. atas ridho-Nya saya dapat menyelesaikan bahan ajar ini. Adapun judul skripsi yang saya ajukan adalah "Eco Guardian" dengan baik.
        \n\n\t\tSalam lingkungan! Dengan menggunakan aplikasi ini, diharapkan anak-anak dapat belajar dengan cara yang menyenangkan dan mudah dipahami tentang pentingnya menjaga lingkungan. Semoga aplikasi "Eco Guardian" dapat membantu menciptakan generasi yang peduli dan bertanggung jawab terhadap lingkungan sejak dini. Terima kasih telah menggunakan aplikasi ini sebagai alat bantu dalam mendidik anak-anak mengenai pentingnya menjaga lingkungan.
        \n\n\t\tTerlepas dari semua itu, kami meyadari sepenuhnya bahwa masih jauh dari kata sempurna. Oleh karena itu dengan tangan terbuka kami menerima segala saran dan kritik dari pembaca agar kami dapat lebih baik lagi dalam menyusun bahan ajar.
        \n\nPenulis
    </string>
    <string name="dampak_tsunami_terhadap_lingkungan">Dampak Tsunami Terhadap Lingkungan</string>
    <string name="dampak_positif_tsunami"><b>Dampak positif dari tsunami yang memengaruhi kehidupan manusia:</b>\n\n<ol type="1">\n<li>Kita dapat mengetahui kekuatan konstruksi bangunan serta kelemahannya, dan melakukan perbaikan dalam konstruksi bangunan agar lebih kuat.</li>\n<li>Dapat memberikan gambaran tentang apa yang terjadi di bawah laut dan aktivitas vulkanik di dalamnya.</li>\n<li>Motivasi dan penelitian oleh ahli geologi tentang aktivitas vulkanik dan hubungannya dengan kebencanaan tsunami.</li>\n</ol></string>
    <string name="dampak_negatif_tsunami"><b>Dampak negatif dari tsunami yang memengaruhi kehidupan manusia:</b>\n\n<ol type="1">\n<li>Tsunami merusak apa saja yang dilaluinya, seperti sarana prasarana, tumbuh-tumbuhan, dan menimbulkan korban jiwa.</li>\n<li>Tsunami menyebabkan gagal panen, menimbulkan genangan air, dan pencemaran air asin pada tanah maupun air bersih.</li>\n</ol></string>
    <string name="tanah_longsor">Tanah Longsor</string>
    <string name="tanah_longsor_instruksi">Ayo tuliskan bagaimana tanah longor dapat terjadi dan apa saja dampak yang ditimbulkan dari tanah longsor tersebut!</string>
    <string name="tanah_longsor_atau_sering_disebut_gerakan_tanah_merupakan_suatu_peristiwa_geologi_yang_terjadi_akibat_pergerakan_masa_batuan_atau_tanah">Tanah longsor atau sering disebut gerakan tanah merupakan suatu peristiwa geologi yang terjadi akibat pergerakan masa batuan atau tanah.</string>
    <string name="penyebab_tanah_longsor"><b>Penyebab Tanah Longsor:</b>\n\n<li><b>Jenis Permukaan</b></li>\nJenis permukaan suatu wilayah menentukan risiko terjadinya longsor. Daerah lereng atau tebing yang miring cenderung mudah mengalami longsor.\nSemakin terjal suatu lereng, maka semakin besar pula kemungkinan terjadinya bencana tanah longsor.\n\n<li><b>Gempa bumi</b></li>\nGempa bumi adalah peristiwa getaran pada permukaan bumi sehingga membuat tanah, batuan dan juga bangunan bergerak.\nHal ini mengakibatkan pemicu utama terjadinya longsor pada wilayah permukaan yang kurang stabil.\n\n<li><b>Hutan Gundul</b></li>\ntumbuhan menahan dan mencengkram tanah ditempatnya.\nNah, tanpa adanya sistem akar pohon, semak, dan tumbuhan lain, tanah akan lebih mudah meluncur dan mengakibatkan longsor.</string>
    <string name="dampak_tanah_longsor_terhadap_lingkungan">Dampak Tanah Longsor terhadap Lingkungan</string>
    <string name="dampak_positif_tanah_longsor"><b>Dampak positif dari tanah longsor yang memengaruhi kehidupan manusia:</b>\n\n<ol>\n<li>Kondisi tanah akan kembali menjadi gembur, terjadi perubahan tekstur tanah, dan mempercepat terjadinya proses peleburan batu dalam tanah.</li>\n<li>Masyarakat sadar pentingnya menjaga keseimbangan lingkungan hidup dan melestarikan hutan.</li>\n<li>Munculnya motivasi atau penelitian oleh ahli geologi dan masyarakat tentang penyebab dan pencegahan tanah longsor.</li>\n</ol></string>
    <string name="dampak_negatif_longsor"><b>Dampak negatif dari tanah longsor yang memengaruhi kehidupan manusia:</b>\n\n<ol>\n<li>Sanitasi lingkungan menjadi buruk,</li>\n<li>Harga jual tanah menurun, dan</li>\n<li>Infrastruktur di lokasi tanah longsor rusak, jalur transportasi terputus, dan perekonomian tersendat.</li>\n</ol></string>
    <string name="penebangan_liar">Penebangan Liar</string>
    <string name="penebangan_liar_instruksi">Ayo tuliskan bagaimana penebangan liar dapat terjadi dan apa saja dampak yang ditimbulkan dari penebangan liar tersebut!</string>
    <string name="indonesia_memiliki_hutan_yang_kaya_akan_keragaman_jenis_populasi_di_dalamnya_namun_seiring_berjalannya_waktu_hutan_di_indonesia_menjadi_hutan_yang_paling_terancam_di_dunia_terkikis_karena_seringnya_terjadi_penebangan_secara_liar_dimana_diperkirakan_70_75_persen_dari_kayu_yang_di_panen_di_tebang_secara_liar">Indonesia memiliki hutan yang kaya akan keragaman jenis populasi di dalamnya, namun seiring berjalannya waktu hutan di Indonesia menjadi hutan yang paling terancam di dunia. Terkikis karena seringnya terjadi penebangan secara liar. Dimana diperkirakan 70-75 persen dari kayu yang di panen di tebang secara liar.</string>
    <string name="dampak_penebangan_liar"><b>Dampak Penebangan Liar:</b>\n<ol type="dash">\n<li><b>Pemanasan Global</b>\nKetika terjadi deforestasi, banyak pepohonan yang dibakar, ditebang, yang mengakibatkan lepasnya karbondioksida di dalamnya, hal ini menyebabkan tingginya kadar karbon dioksida yang ada di atmosfir.</li>\n<li><b>Mengakibatkan banjir</b>\nSalah satu fungsi hutan adalah menyerap dengan cepat dan menyimpan air dalam jumlah yang banyak ketika hujan lebat terjadi. Namun ketika hutan digunduli, hal ini tentu saja membuat aliran air terganggu dan menyebabkan air menggenang dan banjir yang mengalir ke pemukiman penduduk.</li>\n</ol></string>
    <string name="pencemaran_udara">Pencemaran Udara</string>
    <string name="pencemaran_udara_instruksi">Ayo tuliskan bagaimana pencemaran udara dapat terjadi dan apa saja dampak yang ditimbulkan dari pencemaran udara tersebut!</string>
    <string name="kondisi_di_mana_udara_tercampur_dengan_zat_lain_atau_unsur_lain_yang_mengakibatkan_kondisi_buruk_pada_udara_menjadi_tidak_layak_atau_bahkan_membahayakan_untuk_digunakan_makhluk_hidup">kondisi di mana udara tercampur dengan zat lain atau unsur lain yang mengakibatkan kondisi buruk pada udara menjadi tidak layak, atau bahkan membahayakan untuk digunakan makhluk hidup.</string>
    <string name="pencemaran_air">Pencemaran Air</string>
    <string name="pencemaran_air_instruksi">Ayo tuliskan bagaimana pencemaran air dapat terjadi dan apa saja dampak yang ditimbulkan dari pencemaran air tersebut!</string>
    <string name="suatu_perubahan_keadaan_di_suatu_tempat_penampungan_air_seperti_danau_sungai_lautan_dan_air_tanah_akibat_aktivitas_manusia_yang_mengakibatkan_air_menjadi_tidak_layak_atau_bahkan_membahayakan_untuk_digunakan_makhluk_hidup">suatu perubahan keadaan di suatu tempat penampungan air seperti danau, sungai, lautan dan air tanah akibat aktivitas manusia yang mengakibatkan air menjadi tidak layak, atau bahkan membahayakan untuk digunakan makhluk hidup.</string>
    <string name="study">Mari Belajar</string>
    <string name="games">Mari Bermain</string>
    <string name="question_page_four">apa di daerah sekitarmu terdapat perubahan lingkangan? ayo tuliskan apa saja yang menjadi faktor perubahan lingkungan!</string>
    <string name="amati_gambar">Amatilah gambar di atas!</string>
    <string name="gunung_meletus_1">Peristiwa gunung meletus merupakan salah satu kejadian alam yang cukup lumrah terjadi di kawasan yang terdapat banyak gunung berapi, khususnya Indonesia. Hal ini karena Indonesia memiliki cukup banyak gunung berapi aktif yang tersebar di seluruh wilayah Indonesia. Maka dari itu tak heran jika kenampakan alam di Indonesia selalu berubah seiring berjalannya waktu.</string>
    <string name="gunung_meletus_2">Gunung meletus atau yang juga disebut dengan peristiwa erupsi ini merupakan aktivitas gunung berapi yang dapat menyebabkan perubahan bentuk muka bumi. Hal ini terjadi akibat material yang disemburkan saat terjadi gunung meletus.</string>
    <string name="gunung_meletus">GUNUNG MELETUS</string>
    <string name="gunung_meletus_instruksi">Ayo tuliskan bagaimana gunung berapi dapat melutus dan apa saja dampak yang ditimbulkan dari gunung meletus tersebut!</string>
    <string name="dampak_letusan_gunung">Dampak Letusan Gunung Berapi terhadap Lingkungan</string>
    <string name="dampak_positif_letusan_gunung_1"><b>Dampak Positif Letusan Gunung Api bagi Manusia</b>\n<ol type="1">\n<li>Tanah yang dilewati oleh abu vulkanis akibat meletusnya gunung api tersebut, membuat tanahnya menjadi subur dan sangat baik untuk bercocok tanam</li>\n<li>Membuka lapangan pekerjaan baru untuk warga sekitar pegunungan yaitu sebagai penambang pasir</li>\n<li>Dampak meletusnya gunung api adalah munculnya geyser atau sumber mata air panas yang bagus untuk kesehatan kulit.</li>\n<li>Batu yang meluap tatkala terjadi letusan gunung api berguna untuk bahan bangunan.</li>\n</ol></string>
    <string name="dampak_positif_letusan_gunung_2"><b>Dampak Positif Letusan Gunung Api bagi Lingkungan</b>\n<ol type="1">\n<li>Menjadikan tanah sekitar letusan gunung tambah subur</li>\n<li>Menghasilkan batu dan pasir bermutu baik untuk bahan bangunan</li>\n<li>Energi panas yang berasal dari bumi berguna untuk pembangkit tenaga listrik</li>\n<li>Sumber mineral, diantaranya gypsum, belerang, zeolit, dan lainnya</li>\n<li>Sumber mata air bagi pertanian, peternakan, dan sebagainya</li>\n</ol></string>
</resources>