<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_sky"
    tools:context=".TenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextTitlePoppins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/dampak_letusan_gunung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            style="@style/TextRegularPoppins"
            android:layout_width="0dp"
            android:layout_height="455dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="-40dp"
            android:background="@drawable/asset_bg_note"
            android:importantForAutofill="no"
            android:justificationMode="inter_word"
            android:paddingStart="30dp"
            android:paddingTop="40dp"
            android:paddingEnd="55dp"
            android:paddingBottom="30dp"
            android:text="@string/dampak_positif_letusan_gunung_1"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextRegularPoppins"
            android:layout_width="0dp"
            android:layout_height="430dp"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/asset_bg_note"
            android:importantForAutofill="no"
            android:justificationMode="inter_word"
            android:paddingStart="88dp"
            android:paddingTop="35dp"
            android:paddingEnd="35dp"
            android:paddingBottom="30dp"
            android:text="@string/dampak_positif_letusan_gunung_2"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <ImageButton
            android:id="@+id/btn_prev"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/asset_button_prev"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintEnd_toStartOf="@id/btn_next"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/asset_btn_next"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>