<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#96D5ED"
    tools:context=".NineActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextTitlePoppins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/tanah_longsor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextRegularPoppins"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="-50dp"
            android:background="@drawable/asset_bg_note"
            android:importantForAutofill="no"
            android:justificationMode="inter_word"
            android:paddingStart="30dp"
            android:paddingTop="30dp"
            android:paddingEnd="70dp"
            android:paddingBottom="30dp"
            android:text="@string/tanah_longsor_atau_sering_disebut_gerakan_tanah_merupakan_suatu_peristiwa_geologi_yang_terjadi_akibat_pergerakan_masa_batuan_atau_tanah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextRegularPoppins"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/asset_bg_note"
            android:importantForAutofill="no"
            android:justificationMode="inter_word"
            android:paddingStart="70dp"
            android:paddingTop="50dp"
            android:paddingEnd="30dp"
            android:paddingBottom="50dp"
            android:text="@string/penyebab_tanah_longsor"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageButton
            android:id="@+id/btn_prev"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/asset_button_prev"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView5"
            app:layout_constraintEnd_toStartOf="@id/btn_next"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/asset_btn_next"
            app:layout_constraintTop_toBottomOf="@id/textView5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>