<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#96D5ED"
    tools:context=".SeventeenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/include"
            layout="@layout/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextTitlePoppins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/dampak_tsunami_terhadap_lingkungan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextRegularPoppins"
            android:layout_width="0dp"
            android:layout_height="430dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="-50dp"
            android:background="@drawable/asset_bg_note"
            android:importantForAutofill="no"
            android:justificationMode="inter_word"
            android:paddingStart="30dp"
            android:paddingTop="30dp"
            android:paddingEnd="70dp"
            android:paddingBottom="30dp"
            android:text="@string/dampak_positif_tsunami"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextRegularPoppins"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/asset_bg_note"
            android:importantForAutofill="no"
            android:justificationMode="inter_word"
            android:paddingStart="120dp"
            android:paddingTop="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp"
            android:text="@string/dampak_negatif_tsunami"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/img_dampak_tsunami"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/asset_gambar_tsunami"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_next" />

        <ImageButton
            android:id="@+id/btn_prev"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/asset_button_prev"
            app:layout_constraintBottom_toBottomOf="@+id/btn_next"
            app:layout_constraintEnd_toStartOf="@id/btn_next"
            app:layout_constraintTop_toTopOf="@+id/btn_next" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/asset_btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>